Remove view data dependency

--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
 
 #main,
 #data-content {
-  height: 88%;
+  height: 100%;
 }
 
 #sidebar {
@@ -66,11 +66,12 @@ body {
 .color-item {
   display: flex;
 }
+
 .brand-item input {
   margin-left: 40px;
 }
 
-.brand-item label{
+.brand-item label {
   font-size: 15px;
 }
 
@@ -79,7 +80,6 @@ body {
   background: #00ff99;
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
 }
 
 #products-content {
@@ -87,7 +87,9 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   padding: 20px;
-  height: 100%;
+  height: 85%;
+  overflow-y: scroll;
+
 }
 
 .product-item {
@@ -112,15 +114,19 @@ body {
   text-align: center;
   padding: 10px;
 }
+
 #pages {
   height: 8%;
   background: #cc6600;
   text-align: center;
 }
+
 #pages a {
   padding: 10px;
 }
+
 .current-page {
   background: #dc42f4;
 }
 
+#grid-container {}
